--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-statsd (3.2.1-2pexip1) pexip; urgency=medium
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Wed, 31 Jan 2018 16:42:34 +0000
+
 python-statsd (3.2.1-2) unstable; urgency=medium
 
   [ Ondřej Nový ]
