Import Upstream version 3.3.0

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Contributors:
 - Andy McKay <amckay@mozilla.com>
 - Daniel Holz <dgholz@gmail.com>
 - Kyle Conroy <kyle@kyleconroy.com>
+- Mathieu Leplatre <mathieu@mozilla.com>
