--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-statsd (3.3.0-2pexip1) pexip; urgency=medium
+
+  * Initial bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 02 Jun 2022 14:42:51 +0100
+
 python-statsd (3.3.0-2) unstable; urgency=medium
 
   [ Ondřej Nový ]
