--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-statsd (3.3.0-2pexip2) pexip-bullseye; urgency=medium
+
+  * Main bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Fri, 24 Jun 2022 14:04:33 +0100
+
 python-statsd (3.3.0-2pexip1) pexip; urgency=medium
 
   * Initial bullseye build
