--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-statsd (3.3.0-2pexip3) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:35:40 +0100
+
 python-statsd (3.3.0-2pexip2) pexip-bullseye; urgency=medium
 
   * Main bullseye build
