--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-statsd (4.0.1-1pexip1) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:26:23 +0000
+
 python-statsd (4.0.1-1) unstable; urgency=medium
 
   * Team upload.
